# TextualDataErrorDetector

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fetch_updated_misspellings_dict.sh  pyproject.toml
datasets/: weather_subset1_group1_w_errors.csv
notebooks/: data_analysis.ipynb  diff_ocr_labels.ipynb  display_unique_values.ipynb
src/: constants.py  detector.py  error_types.py  imdb_detector.py  io_handler.py  main.py  medical_detector.py  tokenizer.py  utils.py  weather_detector.py
src/constants/: constants.py  misspellings
src/utils/: generic_label_utils.py  specific_label_utils.py
